logs/launcher/BTCUSDT/1s/run-BTCUSDT-1s-gpu0-20250810_183243.log
  File "E:\bot\train_rl.py", line 622
    print("
          ^
SyntaxError: unterminated string literal (detected at line 622)
